[project]
name = "minicode"
version = "0.1.0"
description = "Minimal AI coding agent — conversational TUI with tool calling"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.52",
    "httpx>=0.27",
    "tiktoken>=0.7",
    "python-dotenv>=1.0",
]

[project.scripts]
minicode = "minicode:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
